[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Textures/GamePlitvice/test-0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/GamePlitvice/test-1.png" type="Texture" id=2]
[ext_resource path="res://Games/GamePlitvice/GamePlitviceTest.gd" type="Script" id=3]
[ext_resource path="res://Games/GamePlitvice/KunaSwimming.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 509.341, 236.625, 8.90899, -16.0362, -8.90899, 16.0362, 468.359, 275.825, -3.56359, -8.90899, 3.56359, 8.90899, 452.323, 332.842, -17.818, -10.6908, 17.818, 10.6908, 536.068, 357.787, 0, 0, 0, 0, 568.218, 397.974, -1.41745, -10.5495, 1.41745, 10.5495, 577.049, 430.841, 0, 0, 0, 0, 587.74, 648.22, 0, 0, 0, 0, 594.453, 925.979 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1051.62, 197.362, -17.4614, -25.3984, 17.4614, 25.3984, 1124.64, 235.46, 0, -49.2094, 0, 49.2094, 1146.87, 327.529, 1.5874, -57.1464, -1.5874, 57.1464, 1151.63, 462.458, 0, 0, 0, 0, 1132.58, 919.63 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1055.34, 191.698, -20.4907, -38.3086, 20.4907, 38.3086, 1127.42, 250.431, 0, 0, 0, 0, 1147.44, 394.594, 28.5088, -2.6727, -28.5088, 2.6727, 1083.37, 407.942, 16.0362, -16.0362, -16.0362, 16.0362, 1007.29, 450.657, 5.34539, -36.5268, -5.34539, 36.5268, 976.585, 517.399, 0, 0, 0, 0, 979.255, 673.576, 0, 0, 0, 0, 980.167, 923.692 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 511.35, 238.831, 8.40896, -48.772, -8.40896, 48.772, 450.106, 320.292, 0, 0, 0, 0, 441.414, 481.882, 0, 0, 0, 0, 406.188, 898.625 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1298.42, 181.595, -18, -46, 18, 46, 1398.42, 243.595, 2, -38, -2, 38, 1414.42, 393.595, 0, 0, 0, 0, 1416.42, 487.595, 0, 0, 0, 0, 1396.42, 913.595 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1303.45, 184.83, -15.453, -15.453, 15.453, 15.453, 1373.3, 218.809, -3.56608, -43.9816, 3.56608, 43.9816, 1405.39, 301.87, -7.13215, -23.7738, 7.13215, 23.7738, 1416.72, 488.757, -23.9729, -31.4645, 23.9729, 31.4645, 1488.45, 518.961, -5.94346, -48.7364, 5.94346, 48.7364, 1528.09, 609.573, 0, 0, 0, 0, 1550.75, 919.164 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1303.96, 182.019, -13.4543, -43.7266, 13.4543, 43.7266, 1396.46, 247.609, 1.68179, -43.7266, -1.68179, 43.7266, 1418.32, 491.468, 0, -10.0908, 0, 10.0908, 1404.87, 609.194, 23.5451, -10.0908, -23.5451, 10.0908, 1334.23, 631.057, 18.4997, -18.4997, -18.4997, 18.4997, 1270.33, 678.147, 0, -57.181, 0, 57.181, 1243.42, 784.1, 0, 0, 0, 0, 1250.14, 928.735 )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1299.43, 185.335, -17.9797, -37.4577, 17.9797, 37.4577, 1386.34, 239.274, 0, -23.9729, 0, 23.9729, 1414.8, 368.129, 0, -14.9831, 0, 14.9831, 1416.3, 480.502, -17.9797, -11.9865, 17.9797, 11.9865, 1464.25, 495.485, -10.4882, -13.4848, 10.4882, 13.4848, 1512.19, 541.932, -23.9729, -17.9797, 23.9729, 17.9797, 1584.11, 567.404, -5.99323, -40.4543, 5.99323, 40.4543, 1644.04, 658.8, 0, 0, 0, 0, 1665.02, 918.008 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1094.54, 666.131 )
scale = Vector2( 1.08029, 0.676217 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="paper" type="Sprite" parent="."]
position = Vector2( 790.863, 1319.84 )
rotation = 1.56889
scale = Vector2( 1, 1.1682 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1.98639, 712.377, 229.642, 1250.52 )

[node name="requiredIngPositions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="requiredIngPositions"]
position = Vector2( 241.632, 1325.2 )

[node name="Position2D2" type="Position2D" parent="requiredIngPositions"]
position = Vector2( 438.402, 1325.2 )

[node name="Position2D3" type="Position2D" parent="requiredIngPositions"]
position = Vector2( 621.717, 1325.2 )

[node name="Position2D4" type="Position2D" parent="requiredIngPositions"]
position = Vector2( 818.487, 1325.2 )

[node name="Position2D5" type="Position2D" parent="requiredIngPositions"]
position = Vector2( 1000.12, 1325.2 )

[node name="Kuna" type="KinematicBody2D" parent="."]
position = Vector2( 431.954, 886.965 )
input_pickable = true
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Kuna"]
self_modulate = Color( 1, 1, 1, 0.145098 )
position = Vector2( -14.242, 10.5051 )
polygon = PoolVector2Array( -102.103, -68.469, -2.76501, -41.5299, 121.267, -78.5712, 131.369, -0.560059, 2.28607, 41.5322, -114.45, -3.36621 )

[node name="kuna" type="Sprite" parent="Kuna"]
position = Vector2( 12.4037, -21.8998 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 292.796, 142.275 )

[node name="kunaArea2D" type="Area2D" parent="Kuna"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Kuna/kunaArea2D"]
polygon = PoolVector2Array( -113.837, -47.8294, -131.087, -35.9333, -118.001, -14.5202, -120.975, 11.0566, -34.728, 45.5554, 88.992, 29.4956, 99.1038, 3.32404, 156.8, -2.62402, 147.878, -34.7437, 71.7426, -24.0371, 134.792, -79.949, 30.1061, -49.019 )

[node name="waterfallOptions" type="Node2D" parent="."]

[node name="Path2D1" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 1 )

[node name="Path2D2" type="Path2D" parent="waterfallOptions"]
scale = Vector2( 0.997337, 1 )
curve = SubResource( 2 )

[node name="Path2D3" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 3 )

[node name="Path2D4" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 4 )

[node name="Path2D" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 5 )

[node name="Path2D5" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 6 )

[node name="Path2D6" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 7 )

[node name="Path2D7" type="Path2D" parent="waterfallOptions"]
curve = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="Kuna/kunaArea2D" to="." method="_on_kunaArea2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
